--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* general css for all pages */
 *{
     margin: 0;
     padding: 0;
@@ -32,24 +33,17 @@ body{
 }
 
 .nw_logo{
-    height: 30px;
+    height: 50px;
     float: left;
-}
-
-header{
-    font-family: 'Alegreya Sans', sans-serif;
-    text-align: center;
-    height: 30px;
 }
 
 .navbar{
     background-color:#002A5E;
     font-family: 'Amiri', serif;
     text-align: right;
-    height: 30px;
+    height: 50px;
     width: 100%;
     clear: both;
-
     position: -webkit-sticky;
     position: sticky;
     top: 0;
@@ -59,36 +53,26 @@ header{
 
 .nav_link{
     text-decoration: none;
-    padding: 10px;
+    padding: 20px;
+    top: 10px;
     color: #ab6e00;
+    position: relative;
 }
 
 .nav_link:hover{
     color: #ffffff;
 }
 
-.hero_text{
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: #ffffff;
-}
-
-.index_content{
-    min-height: 100%;
-    /* margin-bottom: 1000px; */
+.spacing{
+    margin: 20px;
+    padding: 20px;
 }
 
 footer{
-    background-color:#002A5E;
+    background-color:#002a5e;
     height: 70px;
     bottom: 0;
-}
-
-.push{
-    height: 70px;
+    width: 100%;
 }
 
 .footer_copyright{
@@ -125,37 +109,132 @@ footer{
     float: right;
 }
 
-.muzak{
-    display: flex;
-    flex-direction: column;
-    padding: 10px;
+/* homepage css */
+.hero_text{
+    font-size: 30px;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #ffffff;
 }
 
+.index_content{
+    min-height: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    background-image: linear-gradient(to right, rgba(0, 77, 171, 1), rgba(94, 61, 0, 0));
+}
+
+.gudtime_col_one{
+    margin: 10px;
+   
+}
+
+.gudtime_col_two{
+    margin: 10px;
+}
+
+.gudtime_col_three{
+    margin: 10px;
+}
+
+.gudtime_col_four{
+    margin: 10px;
+}
+
+.muzak_container{
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    background-image: linear-gradient(to right, rgba(0, 77, 171, 0), rgba(94, 61, 0, 1));
+}
+
+.muzak_portion{
+    display: flex;
+    justify-content: center;
+ }
+ 
+ .muzak_text{
+    text-align: center;
+    padding: 10px;
+    color: #f2dbae;
+ }
+
+.welcome_text{
+    font-size: 40px;
+}
+
+.gudtime_text{
+    font-size: 30px;
+}
+
+/* about page css */
 .video_content{
     display: flex;
-    justify-content:flex-start;
-    align-items: flex-start;
+    justify-content: center;
+    align-items: center;
     /* padding: 10px;
     margin: 5px; */
 }
 
 .video_col_one{
     padding: 10px;
-    background-color: #000000;
+    background-image: linear-gradient(to right, rgba(0, 77, 171, 1), rgba(94, 61, 0, 0));
+    background-size: 450px;
 }
 
 .video_col_two{
     padding: 100px;
-    background-color: #f2dbae;
+    background-image: linear-gradient(to right, rgba(0, 77, 171, 0), rgba(94, 61, 0, 1));
+    height: 850px;
 }
 
-.muzak_portion{
-   display: flex;
-   justify-content: center;
+.post_video_text{
+    font-size: 20px;
+    color: #f2dbae;
 }
 
-.muzak_text{
-   text-align: center;
-   padding: 10px;
-   color: #ab6e00;
+.video_text{
+    text-indent: 40px;
+    font-size: 30px;
+    width: 300px;
+    color: #f2dbae;
 }
+
+.covid_update_text{
+    display: flex;
+    flex-flow: column;
+    justify-content: space-around;
+    align-items: center;
+    padding: 50px;
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.c_initial{
+    font-size: 50px;
+    color: #5E1109;
+    opacity: 1;
+}
+
+hr.rounded{
+    border-top: 5px solid #bbb;
+    border-radius: 5px;
+    width: 350px;
+    margin: 10px;
+    border-color: #1156AB;
+}
+
+.c_open{
+    color: #f2dbae;
+    margin: 10px;
+    font-size: 30px;
+}
+
+.c_gen{
+    color: #f2dbae;
+    font-size: 20px;
+}
+
+/* contact page css */
