--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Amatic SC', cursive;
 }
 
 html{
@@ -39,7 +40,6 @@ body{
 
 .navbar{
     background-color:#002a5e;
-    font-family: 'Amiri', serif;
     text-align: right;
     height: 50px;
     width: 100%;
@@ -57,15 +57,11 @@ body{
     top: 10px;
     color: #ab6e00;
     position: relative;
+    font-family: 'Podkova', serif;
 }
 
 .nav_link:hover{
     color: #ffffff;
-}
-
-.spacing{
-    margin: 10px;
-    padding: 10px;
 }
 
 footer{
@@ -79,6 +75,7 @@ footer{
     float: left;
     margin: 25px;
     color: #ab6e00;
+    font-family: 'Podkova', serif;
 }
 
 .fab{
@@ -111,13 +108,13 @@ footer{
 
 /* homepage css */
 .hero_text{
-    font-size: 30px;
+    font-size: 40px;
     text-align: center;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: #ffffff;
+    color: #f2dbae;
 }
 
 .index_content{
@@ -162,16 +159,46 @@ footer{
  }
 
 .welcome_text{
-    font-size: 40px;
+    font-size: 50px;
     text-transform: uppercase;
 }
 
 .gudtime_text{
-    font-size: 30px;
+    font-size: 40px;
 }
 
 .post_gudtime_text{
-    font-size: 20px;
+    font-size: 25px;
+}
+
+.gudtime_img_text{
+    color: #f2dbae;
+    font-size: 30px;
+}
+
+.sv_pet_event{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.sv_event_header{
+    font-size: 50px;
+    color: #f2dbae;
+}
+
+.event_col_one{
+    display: flex;
+    flex-direction: column;
+    padding: 100px;
+    background-image: linear-gradient(to right, rgba(0, 77, 171, 1), rgba(94, 61, 0, 0));
+    height: 768px;
+}
+
+.event_col_two{
+    padding: 100px;
+    background-image: linear-gradient(to right, rgba(0, 77, 171, 0), rgba(94, 61, 0, 1));
+    height: 768px;
 }
 
 /* about page css */
@@ -185,22 +212,36 @@ footer{
     padding: 10px;
     background-image: linear-gradient(to right, rgba(0, 77, 171, 1), rgba(94, 61, 0, 0));
     background-size: 450px;
+    height: 855px;
 }
 
 .video_col_two{
     padding: 100px;
     background-image: linear-gradient(to right, rgba(0, 77, 171, 0), rgba(94, 61, 0, 1));
-    height: 850px;
+    height: 855px;
+}
+
+.vid_col_two_header{
+    font-size: 40px;
+    color: #f2dbae;
+}
+
+.vid_col_two_rounded{
+    border-top: 5px solid #bbb;
+    border-radius: 5px;
+    width: 65px;
+    border-color: #002a5e;
+    text-align: left;
 }
 
 .post_video_text{
-    font-size: 20px;
+    font-size: 25px;
     color: #f2dbae;
 }
 
 .video_text{
     text-indent: 40px;
-    font-size: 30px;
+    font-size: 35px;
     width: 300px;
     color: #f2dbae;
 }
@@ -215,7 +256,7 @@ footer{
 }
 
 .c_initial{
-    font-size: 50px;
+    font-size: 70px;
     color: #5e1109;
 }
 
@@ -230,12 +271,12 @@ hr.rounded{
 .c_open{
     color: #f2dbae;
     margin: 10px;
-    font-size: 30px;
+    font-size: 40px;
 }
 
 .c_gen{
     color: #f2dbae;
-    font-size: 20px;
+    font-size: 30px;
 }
 
 /* contact page css */
@@ -250,7 +291,7 @@ hr.rounded{
 
 .contact_header{
     text-transform: uppercase;
-    font-size: 30px;
+    font-size: 50px;
     color: #f2dbae;
 }
 
@@ -270,17 +311,17 @@ hr.rounded{
 }
 
 .contact_text{
-    font-size: 20px;
+    font-size: 30px;
     color: #f2dbae;
 }
 
 .contact_title{
-    font-size: 20px;
+    font-size: 25px;
     color: #f2dbae;
 }
 
 .contact_number{    
-    font-size: 20px;
+    font-size: 25px;
     color: #f2dbae;
     border-style: solid;
     border-color: #002a5e;
@@ -296,7 +337,7 @@ hr.rounded{
 }
 
 .g_maps_text{
-    font-size: 30px;
+    font-size: 45px;
     color: #f2dbae;
 }
 
@@ -329,7 +370,7 @@ hr.rounded{
 .g_map_head{
     display: flex;
     justify-content: center;
-    font-size: 20px;
+    font-size: 35px;
     text-transform: uppercase;
     color: #f2dbae;
 }
@@ -337,7 +378,7 @@ hr.rounded{
 .g_map_text{
     display: flex;
     justify-content: center;
-    font-size: 15px;
+    font-size: 25px;
     color: #f2dbae;
 }
 
@@ -349,7 +390,7 @@ hr.rounded{
 }
 
 .form_header{
-    font-size: 30px;
+    font-size: 40px;
     color: #f2dbae;
     text-transform: uppercase;
 }
@@ -382,7 +423,17 @@ input[type=submit]{
     cursor: pointer;
 }
 
+input[type=submit]:hover{
+    background-color: #002a5e;
+    font-family: 'Podkova', serif;
+}
+
 .form_container{
     border-radius: 5px;
     background-color:#f2f2f2;
+    padding: 20px;
+}
+
+.form_text{
+    font-family: 'Podkova', serif;
 }
