--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@ body{
     margin: 0 auto;
 }
 
+/* nav bar container */
 .container{
     position: -webkit-sticky;
     position: sticky;
@@ -26,11 +27,6 @@ body{
     clear: both;
     /* z-index assures this container stays on top of everything else and doesn't bleed text when scrolling down  */
     z-index: 1;
-}
-
-.init_header{
-    color: #ffffff;
-    background-color: #000000;
 }
 
 .nw_logo{
@@ -107,39 +103,7 @@ footer{
 }
 
 /* homepage css */
-.hero_text{
-    font-size: 40px;
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: #f2dbae;
-}
-
-.index_content{
-    min-height: 100%;
-    display: flex;
-    justify-content: space-evenly;
-    background-image: linear-gradient(to right, rgba(0, 77, 171, 1), rgba(94, 61, 0, 0));
-}
-
-.gudtime_col_one{
-    margin: 10px;
-}
-
-.gudtime_col_two{
-    margin: 10px;
-}
-
-.gudtime_col_three{
-    margin: 10px;
-}
-
-.gudtime_col_four{
-    margin: 10px;
-}
-
+/* music section css start */
 .muzak_container{
     display: flex;
     flex-direction: column;
@@ -176,6 +140,30 @@ footer{
     font-size: 30px;
 }
 
+/* hero image css start */
+.hero_text{
+    font-size: 40px;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #f2dbae;
+}
+
+/* doggo picture section css start */
+.index_content{
+    min-height: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    background-image: linear-gradient(to right, rgba(0, 77, 171, 1), rgba(94, 61, 0, 0));
+}
+
+.gudtime_cols{
+    margin: 10px;
+}
+
+/* event css start */
 .sv_pet_event{
     display: flex;
     justify-content: center;
@@ -202,6 +190,7 @@ footer{
 }
 
 /* about page css */
+/* video section css start */
 .video_content{
     display: flex;
     justify-content: center;
@@ -246,6 +235,7 @@ footer{
     color: #f2dbae;
 }
 
+/* covid message css start */
 .covid_update_text{
     display: flex;
     flex-flow: column;
@@ -280,7 +270,7 @@ hr.rounded{
 }
 
 /* contact page css */
-
+/* contact section css start */
 .contact_div{
     display: flex;
     flex-flow: column;
@@ -328,6 +318,7 @@ hr.rounded{
     padding: 10px;
 }
 
+/* google maps css start */
 .g_maps_header{
     display: flex;
     flex-flow: column;
@@ -355,15 +346,7 @@ hr.rounded{
     background-image: linear-gradient(to right, rgba(0, 77, 171, 1), rgba(94, 61, 0, 0));
 }
 
-.g_map_one{
-    margin: 30px;
-}
-
-.g_map_two{
-    margin: 30px;
-}
-
-.g_map_three{
+.g_map_space{
     margin: 30px;
 }
 
@@ -382,6 +365,7 @@ hr.rounded{
     color: #f2dbae;
 }
 
+/* form css start */
 .form_head_container{
     display: flex;
     flex-flow: column;
